RESOLVED FIXED 206799
Protect against crashes during WKWebView initialization when methods are called before the view is fully initialized
https://bugs.webkit.org/show_bug.cgi?id=206799
Summary Protect against crashes during WKWebView initialization when methods are call...
Darin Adler
Reported 2020-01-25 08:28:53 PST
Protect against crashes during WKWebView init function when methods are called before the view is fully initialized
Attachments
Patch (5.93 KB, patch)
2020-01-25 08:34 PST, Darin Adler
no flags
Darin Adler
Comment 1 2020-01-25 08:34:57 PST
Darin Adler
Comment 2 2020-01-25 08:34:59 PST
WebKit Commit Bot
Comment 3 2020-01-26 14:14:55 PST
The commit-queue encountered the following flaky tests while processing attachment 388776 [details]: fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com) imported/w3c/web-platform-tests/xhr/event-abort.any.html bug 206677 (author: psaavedra@igalia.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2020-01-26 14:15:21 PST
Comment on attachment 388776 [details] Patch Clearing flags on attachment: 388776 Committed r255132: <https://trac.webkit.org/changeset/255132>
WebKit Commit Bot
Comment 5 2020-01-26 14:15:23 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.